<resources>
    <string name="app_name">NKana</string>
    <string name="login_screen">Login Screen</string>
    <string name="action_settings">Settings</string>
    <string name="hint_email">Email</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="hint_firstname">First Name</string>
    <string name="hint_lastname">Last Name</string>
    <string name="hint_mobileno">Mobile Number</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="btn_link_to_login">Already registred! Login Me.</string>
    <string name="welcome">Welcome</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="name">Fullname</string>
    <string name="title_activity_registration">Registration</string>
    <string name="error_network">No Network Available</string>
    <string name="error_no_response">No Response</string>
    <string name="error_network_http_error">Network Error</string>
    <string name="error_unknown">Unknown Error</string>
    <string name="title_activity_geo">Geo Droid</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="hint_old_password">Old Password</string>
    <string name="hint_new_password">New Password</string>
    <string name="btn_change_password">CHANGE PASSWORD</string>
    <string name="btn_cancel">CANCEL</string>
    <string name="btn_update">UPDATE</string>
    <string name="btn_done">Done</string>


    <string name="sign_in">Sign in</string>

    <string name="questioner">Questioner</string>
    <string name="monitor">Monitor</string>
    <string name="tracker">Tracker</string>
    <string name="remainders">Reminders</string>
    <string name="categories">Categories</string>
    <string name="locationsharing">Location Sharing</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="add_group">Add Group</string>
    <string name="group_details">Group Details</string>
    <string name="group_update">Group Update</string>
    <string name="group_places">Group Places</string>
    <string name="members_list">Members List</string>
    <string name="member_detail">Member Detail</string>

    <string name="add">Add</string>
    <string name="search">Search</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>

    <string name="members">Members</string>
    <string name="groups">Groups</string>

    <!-- Toast -->
    <string name="open_user_profile">Open user profile</string>
    <string name="open_settings">Open settings</string>
    <string name="group_setup">Group Setup</string>
    <string name="help_item">Help</string>
    <string name="lists_item">Lists</string>
    <string name="reminders">Reminders</string>


    <string name="btn_mentor">MENTOR</string>
    <string name="btn_volunteer">volunteer</string>
    <string name="btn_children">Children</string>
    <string name="mentor_login">Mentor Login</string>
    <string name="volunteer_login">Volunteer Login</string>
    <string name="children_login">Children Login</string>
    <string name="title_mentor">Mentor</string>
    <string name="title_volunteer">Volunteer</string>
    <string name="title_children">Children</string>
    <string name="admin_data">Admin</string>


</resources>
