<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/bg_login"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <com.malmstein.floatinghints.FloatingHintEditTextLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/form_horizontal_padding"
            app:floatingHintInAnimation="@anim/abc_fade_in"
            app:floatingHintOutAnimation="@anim/abc_fade_out"
            app:floatingHintTextAppearance="@style/FloatLabel.Label">

            <EditText
                android:id="@+id/old_password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/hint_old_password"
                android:inputType="textPassword"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />
        </com.malmstein.floatinghints.FloatingHintEditTextLayout>

        <com.malmstein.floatinghints.FloatingHintEditTextLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/form_horizontal_padding"
            app:floatingHintInAnimation="@anim/abc_fade_in"
            app:floatingHintOutAnimation="@anim/abc_fade_out"
            app:floatingHintTextAppearance="@style/FloatLabel.Label">

            <EditText
                android:id="@+id/new_password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:hint="@string/hint_new_password"
                android:inputType="textPassword"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />
        </com.malmstein.floatinghints.FloatingHintEditTextLayout>

        <com.malmstein.floatinghints.FloatingHintEditTextLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/form_horizontal_padding"
            app:floatingHintInAnimation="@anim/abc_fade_in"
            app:floatingHintOutAnimation="@anim/abc_fade_out"
            app:floatingHintTextAppearance="@style/FloatLabel.Label">

            <EditText
                android:id="@+id/confirm_password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:hint="@string/hint_confirm_password"
                android:inputType="textPassword"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />
        </com.malmstein.floatinghints.FloatingHintEditTextLayout>
        <!-- Change Password Button -->

        <Button
            android:id="@+id/change_passwored_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@drawable/round_shape_button"
            android:text="@string/btn_change_password"
            android:textColor="@color/btn_login" />
    </LinearLayout>

</LinearLayout>
