<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/bg_login"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/nkana_logo" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <com.malmstein.floatinghints.FloatingHintEditTextLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/form_horizontal_padding"
            app:floatingHintInAnimation="@anim/abc_fade_in"
            app:floatingHintOutAnimation="@anim/abc_fade_out"
            app:floatingHintTextAppearance="@style/FloatLabel.Label">

            <EditText
                android:id="@+id/userEmail"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />
        </com.malmstein.floatinghints.FloatingHintEditTextLayout>

        <com.malmstein.floatinghints.FloatingHintEditTextLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/form_horizontal_padding"
            app:floatingHintInAnimation="@anim/abc_fade_in"
            app:floatingHintOutAnimation="@anim/abc_fade_out"
            app:floatingHintTextAppearance="@style/FloatLabel.Label">

            <EditText
                android:id="@+id/userPassword"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />
        </com.malmstein.floatinghints.FloatingHintEditTextLayout>
        <!-- Login Button -->

        <Button
            android:id="@+id/loginButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@color/btn_login_bg"
            android:text="@string/btn_login"
            android:textColor="@color/btn_login" />


    </LinearLayout>

</LinearLayout>
