<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@color/bg_login"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <com.malmstein.floatinghints.FloatingHintEditTextLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/form_horizontal_padding"
            app:floatingHintInAnimation="@anim/abc_fade_in"
            app:floatingHintOutAnimation="@anim/abc_fade_out"
            app:floatingHintTextAppearance="@style/FloatLabel.Label">

            <EditText
                android:id="@+id/firstname"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="Name"
                android:inputType="textCapWords"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />
        </com.malmstein.floatinghints.FloatingHintEditTextLayout>

        <com.malmstein.floatinghints.FloatingHintEditTextLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/form_horizontal_padding"
            app:floatingHintInAnimation="@anim/abc_fade_in"
            app:floatingHintOutAnimation="@anim/abc_fade_out"
            app:floatingHintTextAppearance="@style/FloatLabel.Label">

            <EditText
                android:id="@+id/dob_id"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="DOB"
                android:inputType="textCapWords"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />
        </com.malmstein.floatinghints.FloatingHintEditTextLayout>

        <com.malmstein.floatinghints.FloatingHintEditTextLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/form_horizontal_padding"
            app:floatingHintInAnimation="@anim/abc_fade_in"
            app:floatingHintOutAnimation="@anim/abc_fade_out"
            app:floatingHintTextAppearance="@style/FloatLabel.Label">

            <EditText
                android:id="@+id/sex_id"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="Sex"
                android:inputType="textCapWords"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />
        </com.malmstein.floatinghints.FloatingHintEditTextLayout>

        <com.malmstein.floatinghints.FloatingHintEditTextLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/form_horizontal_padding"
            app:floatingHintInAnimation="@anim/abc_fade_in"
            app:floatingHintOutAnimation="@anim/abc_fade_out"
            app:floatingHintTextAppearance="@style/FloatLabel.Label">

            <EditText
                android:id="@+id/class_id"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="Class"
                android:inputType="textCapWords"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />
        </com.malmstein.floatinghints.FloatingHintEditTextLayout>

        <com.malmstein.floatinghints.FloatingHintEditTextLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/form_horizontal_padding"
            app:floatingHintInAnimation="@anim/abc_fade_in"
            app:floatingHintOutAnimation="@anim/abc_fade_out"
            app:floatingHintTextAppearance="@style/FloatLabel.Label">

            <EditText
                android:id="@+id/nameof_school_id"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="Name of the school"
                android:inputType="textCapWords"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />
        </com.malmstein.floatinghints.FloatingHintEditTextLayout>

        <com.malmstein.floatinghints.FloatingHintEditTextLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/form_horizontal_padding"
            app:floatingHintInAnimation="@anim/abc_fade_in"
            app:floatingHintOutAnimation="@anim/abc_fade_out"
            app:floatingHintTextAppearance="@style/FloatLabel.Label">

            <EditText
                android:id="@+id/address_id"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="Address for communication"
                android:inputType="textCapWords"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />
        </com.malmstein.floatinghints.FloatingHintEditTextLayout>

        <com.malmstein.floatinghints.FloatingHintEditTextLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/form_horizontal_padding"
            app:floatingHintInAnimation="@anim/abc_fade_in"
            app:floatingHintOutAnimation="@anim/abc_fade_out"
            app:floatingHintTextAppearance="@style/FloatLabel.Label">

            <EditText
                android:id="@+id/mobileno"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/hint_mobileno"
                android:inputType="textCapWords"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />
        </com.malmstein.floatinghints.FloatingHintEditTextLayout>

        <com.malmstein.floatinghints.FloatingHintEditTextLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/form_horizontal_padding"
            app:floatingHintInAnimation="@anim/abc_fade_in"
            app:floatingHintOutAnimation="@anim/abc_fade_out"
            app:floatingHintTextAppearance="@style/FloatLabel.Label">

            <EditText
                android:id="@+id/email"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />
        </com.malmstein.floatinghints.FloatingHintEditTextLayout>

        <!-- Login Button -->

        <Button
            android:id="@+id/registerButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@color/btn_login_bg"
            android:text="@string/btn_register"
            android:textColor="@color/btn_login" />

    </LinearLayout>

</ScrollView>
